OO-3887: new Adobe Connect course element (DFN impl. partial)